# Final

./: CMakeLists.txt  README.md  main.cpp
_tests/_test_files/: basic_test.cpp  testB.cpp  testQueue.cpp  testSHRPN.cpp  testStack.cpp
includes/Graph/Graph-Info/: graph.cpp  graph.h
includes/Graph/Plot/: CoordinateTranslator.h  plot.cpp  plot.h
includes/Graph/animate/: animate.cpp  animate.h
includes/Graph/sidebar/: sidebar.cpp  sidebar.h
includes/Linked_List_Functions/: Linked_List_Functions.h  linkedlistfunctionsTemplated.h
includes/RPN/: Rpn.cpp  Rpn.h
includes/SY/: SY.cpp  SY.h
includes/node/: node.h
includes/queue/: MyQueue.h
includes/stack/: MyStack.h
includes/tokenizer/: Token.h  constants.h  state_machine_functions.cpp  state_machine_functions.h  stokenize.cpp  stokenize.h
